opam-version: "2.0"
maintainer: "Anders Fugmann <anders@fugmann.net>"
authors: [ "Anders Fugmann" ]
homepage: "https://github.com/andersfugmann/amqp-client"
bug-reports: "https://github.com/andersfugmann/amqp-client/issues"
dev-repo: "git+https://github.com/andersfugmann/amqp-client.git"
doc: "https://andersfugmann.github.io/amqp-client/amqp-client-async/Amqp_client_async/"
license: "BSD3"
version: "2.2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.04.0"}
  "dune" {build}
  "xml-light" {build}
  "amqp-client" {= "2.2.0"}
  "ocplib-endian" {>= "0.6"}
  "async" {>= "v0.10.0"}
  "uri"
]
synopsis: "Amqp client library, async version"
