opam-version: "2.0"
maintainer: "Anders Fugmann <anders@fugmann.net>"
authors: [ "Anders Fugmann" ]
homepage: "https://github.com/andersfugmann/amqp-client"
bug-reports: "https://github.com/andersfugmann/amqp-client/issues"
dev-repo: "git+https://github.com/andersfugmann/amqp-client.git"
doc: "https://andersfugmann.github.io/amqp-client/"
license: "BSD-3-Clause"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "ocaml" {>= "4.13.0"}
  "dune" {>= "2.0"}
  "ezxmlm" {build}
]
synopsis: "Amqp client base library"
description: """
This library provides high level client bindings for amqp. The library
is tested with rabbitmq, but should work with other amqp
servers. The library is written in pure OCaml.

This is the base library required by lwt/async versions.
You should install either amqp-client-async or amqp-client-lwt
for actual client functionality."""
